<resources>
    <string name="app_name">Ejemplo</string>
    <string name="titulo">Formulario</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo</string>
    <string name="guardar">Guardar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="pasatiempos">Pasatiempos</string>
    <string name="cine">Cine</string>
    <string name="nadar">Nadar</string>
    <string name="gym">Gimnasio</string>
</resources>
